--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title> Ze poza zu hemen ikustea!</title>
   </head>
   <body>
+    <h1> Kaixo kaixo </h1>
 Hello there, awesome person!
   </body>
 </html>  
