--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1> Kaixo kaixo </h1>
-    <img rsc="https://avatars1.githubusercontent.com/u/64772415?v=4">
+    <img src="https://avatars1.githubusercontent.com/u/64772415?v=4">
   </body>
 </html>  
