--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <h1> Kaixo kaixo </h1>
     <img src="https://avatars1.githubusercontent.com/u/64772415?v=4">
     <ul>
-      <li>https://www.berria.eus/</li>
-      <li>https://www.eldiario.es/</li>
+      <li> <a href="https://www.berria.eus/"></li>
+      <li> <a href="https://www.eldiario.es/"></li>
     </ul>
   </body>
 </html>  
