--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title> Ze poza zu hemen ikustea!</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1> Kaixo kaixo </h1>
